Cookie bar z-index fix

--- a/Controls/CookieBar/src/DotVVM.Contrib.CookieBar/Styles/DotVVM.Contrib.CookieBar.scss
+++ b/Controls/CookieBar/src/DotVVM.Contrib.CookieBar/Styles/DotVVM.Contrib.CookieBar.scss
@@ -265,10 +265,11 @@
         max-width: var(--pop-up-max-width);
         width: 100%;
         background: var(--color-background);
-        z-index: 999;
+        z-index: 99999;
         box-shadow: var(--dialog_box-shadow);
         gap: 1em;
         box-sizing: border-box;
+        isolation: isolate;
 
         @include res-max-tablet {
             --pop-up-max-width: calc(100% - 2rem);
